java lib upgrade